Try using `grid layout` for the content block 🍇

--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -7,38 +7,22 @@
 
 .page {
   display: flex;
-  min-height: calc(100vh - var.$menu-bar-height);
+  min-height: calc(100dvh - var.$menu-bar-height);
 }
 
 .content {
-  flex-basis: 100%;
-  min-width: 0px;
+  display: grid;
+  grid-template-columns: 2rem 1fr 2rem 0;
 
-  display: flex;
+  @media only screen and (min-width: var.$enable-pagetoc) {
+    grid-template-columns: 1rem 1fr 0 var.$pagetoc-width;
+    column-gap: 1rem;
+    padding-right: 1rem;
+  }
 
   main {
     font-size: 1.4rem;
-    flex-basis: 96%;
     min-width: 0px;
-  }
-
-  @media only screen and (max-width: var.$enable-pagetoc) {
-    spacer {
-      flex-basis: 3rem;
-    }
-  }
-
-  @media only screen and (min-width: var.$enable-pagetoc) {
-    spacer {
-      &.left {
-        flex-basis: 4rem;
-        min-width: 24px;
-      }
-      &.right {
-        flex-basis: 1rem;
-        min-width: 8px;
-      }
-    }
   }
 
   a {
@@ -239,8 +223,8 @@ a > .hljs {
 }
 
 .searchresults-outer {
-  min-width: 84vw;
-  max-height: 88vh;
+  min-width: 84dvw;
+  max-height: 88dvh;
   overflow-y: scroll;
 
   font-size: 1.3em;
