--- a/scss/_catppuccin.scss
+++ b/scss/_catppuccin.scss
@@ -4,7 +4,7 @@
   --sidebar-bg: #181825;
   --sidebar-fg: #cdd6f4;
   --sidebar-non-existant: #6c7086;
-  --sidebar-active: #f5e0dc;
+  --sidebar-active: #89b4fa;
   --sidebar-spacer: #6c7086;
   --scrollbar: #6c7086;
   --icons: #6c7086;
@@ -35,7 +35,7 @@
   --sidebar-bg: #1e2030;
   --sidebar-fg: #cad3f5;
   --sidebar-non-existant: #6e738d;
-  --sidebar-active: #f4dbd6;
+  --sidebar-active: #8aadf4;
   --sidebar-spacer: #6e738d;
   --scrollbar: #6e738d;
   --icons: #6e738d;
