Revert only `latte hljs-built_in` to previous version 🐩
This is completely my feeling, but if the `hljs-built_in` of the light theme is red,
it is a little different from the atmosphere I am looking for.

Rather, this might be a good way to enjoy the visual difference from the dark theme.

--- a/scss/_catppuccin-highlight.scss
+++ b/scss/_catppuccin-highlight.scss
@@ -419,7 +419,7 @@
   color: #8839ef;
 }
 .latte code .hljs-built_in {
-  color: #d20f39;
+  color: #209fb5;
 }
 .latte code .hljs-type {
   color: #df8e1d;
