This is a measure for now because of the screen flicker 🦩

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -93,7 +93,7 @@
 
     <div id="page" class="page">
       <div id="sidebar" class="sidebar" aria-label="Table of contents">
-        <nav class="sidebar-scrollbox">
+        <nav id="side-scroll" class="sidebar-scrollbox">
           {{#toc}}{{/toc}}
         </nav>
       </div>
