--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -248,6 +248,7 @@ a > .hljs {
 }
 
 .sidebar-scrollbox {
+  display: none;    // Initially, it is hidden
   position: fixed;
   top: var.$menu-bar-height;
   bottom: 0;
