Various adjustments to ServiceWorker and manifest 🐠
🍦 (try) fix: `start_url` is not in scope of Service Worker.
🍦 Utilize shortcuts.
🍦 add: 96x96 icon added.

--- a/theme/header.hbs
+++ b/theme/header.hbs
@@ -15,7 +15,7 @@ document.getElementById(e).classList.add("theme-selected")}),1)})();
   if ("serviceWorker" in navigator) {
     try {
       await navigator.serviceWorker.register("{{path_to_root}}serviceworker.js", {
-        scope: "{{site_url}}",
+        scope: "/commentary/",
       });
     } catch (error) {
       console.error(`Registration failed with ${error}`);
