Various CSS layout adjustments 🦢
🦆 Fixed an issue where the background color of keywords was lost.
🦆 Change from specifying px to rem as much as possible.
🦆 Fine-tuning of design.
🦆 Removed unnecessary parameters.

--- a/scss/_footnote.scss
+++ b/scss/_footnote.scss
@@ -20,9 +20,7 @@
 
 .footnote-reference {
   a {
-    $jump-shift: 20px;
-
-    margin-top: 0 - (var.$menu-bar-height + $jump-shift);
-    padding-top: var.$menu-bar-height + $jump-shift;
+    margin-top: 0 - (var.$menu-bar-height + var.$jump-shift);
+    padding-top: var.$menu-bar-height + var.$jump-shift;
   }
 }
