--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -18,7 +18,7 @@
   column-gap: 1rem;
 
   @media only screen and (min-width: var.$enable-pagetoc) {
-    grid-template-columns: 2rem 1fr 0 var.$pagetoc-width 1rem;
+    grid-template-columns: 2rem 1fr 0 var.$pagetoc-width 0.1rem;
   }
 
   main {
@@ -144,7 +144,6 @@ a > .hljs {
   }
 
   .menu-title {
-    font-weight: 400;
     font-size: 1.3rem;
     font-style: italic;
     line-height: var.$menu-bar-height;
@@ -180,10 +179,11 @@ a > .hljs {
 :not(pre) {
   & > .hljs {
     display: inline;
-    padding: 0.1em 0.3em;
-    border-radius: 3px;
+    font-weight: 500;
+    padding: 0.1rem 0.3rem;
+    border-radius: 0.2rem;
     color: var(--inline-code-color);
-    overflow-x: initial;
+    background-color: var(--quote-bg);
   }
 }
 
@@ -275,9 +275,12 @@ a > .hljs {
       color: var(--sidebar-fg);
       text-decoration: none;
 
-      &:hover,
+      &:hover {
+        color: var(--sidebar-active);
+      }
       &.active {
         color: var(--sidebar-active);
+        font-weight: bold;
       }
     }
 
