--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,11 +1,13 @@
 $mobile-max-width: 680px;
 $enable-pagetoc: 760px;
 
-$sidebar-width: 200px;
-$pagetoc-width: 220px;
+$sidebar-width: 20rem;
+$pagetoc-width: 22rem;
 
-$scrollbar-width: 7px;
-$menu-bar-height: 45px;
+$scrollbar-width: 0.7rem;
+$menu-bar-height: 4.5rem;
+
+$jump-shift: 2rem;
 
 $mono-font: 'SauceCodePro NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $code-font-size: 0.85em; // please adjust the ace font size accordingly in editor.js
