--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -14,16 +14,16 @@
 
 .content {
   display: grid;
-  grid-template-columns: 2rem 1fr 2rem;
+  grid-template-columns: 1rem 1fr 1rem;
   column-gap: 1rem;
 
   @media only screen and (min-width: var.$enable-pagetoc) {
-    grid-template-columns: 2rem 1fr 0 var.$pagetoc-width 0.1rem;
+    grid-template-columns: 1rem 1fr 0 var.$pagetoc-width 0;
   }
 
   main {
-    font-size: 1.4rem;
-    min-width: 0px;
+    font-size: 0.9rem;
+    min-width: 0;
   }
 
   a {
@@ -61,13 +61,13 @@
   color: #fff;
   background-color: #333;
   transform: translateX(-50%); // Center by moving tooltip 50% of its width left
-  left: -8px; // Half of the width of the icon
-  top: -35px;
-  font-size: 0.8em;
+  left: -0.8rem; // Half of the width of the icon
+  top: -3.6rem;
+  font-size: 0.5em;
   text-align: center;
-  border-radius: 6px;
-  padding: 5px 8px;
-  margin: 5px;
+  border-radius: 0.8rem;
+  padding: 0.4rem 0.8rem;
+  margin: 0.4rem;
 
   .tooltipped & {
     visibility: visible;
@@ -100,8 +100,7 @@ a > .hljs {
 
     i,
     .icon-button {
-      position: relative;
-      padding: 0 8px;
+      padding: 0 0.5rem;
       line-height: var.$menu-bar-height;
       cursor: pointer;
     }
@@ -130,8 +129,7 @@ a > .hljs {
     }
   }
   .right-buttons {
-    font-size: 1.6em;
-    margin: 0 15px;
+    margin: 0 1rem;
 
     a {
       text-decoration: none;
@@ -140,11 +138,11 @@ a > .hljs {
 
   .left-buttons {
     display: flex;
-    margin: 0 5px;
+    margin: 0 0.4rem;
   }
 
   .menu-title {
-    font-size: 1.3rem;
+    font-size: 0.8em;
     font-style: italic;
     line-height: var.$menu-bar-height;
     text-align: right;
@@ -157,15 +155,15 @@ a > .hljs {
 .nav-wrapper {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .nav-chapters {
-  font-size: 2.5em;
+  font-size: 1.5em;
   text-align: center;
   text-decoration: none;
-  width: 70px;
-  border-radius: 7px;
+  width: 6rem;
+  border-radius: 0.8rem;
   background-color: var(--sidebar-bg);
 
   &:visited {
@@ -188,12 +186,12 @@ a > .hljs {
 }
 
 #searchbar {
-  min-width: 16rem;
-  height: 24px;
-  margin: 10px 5px;
-  padding: 8px 16px;
-  border: 1px solid var(--searchbar-border-color);
-  border-radius: 16px;
+  min-width: 10rem;
+  height: 1.4rem;
+  margin: 0.5rem 0.25rem;
+  padding: 0.5rem 1rem;
+  border: 0.1rem solid var(--searchbar-border-color);
+  border-radius: 1em;
   background-color: var(--searchbar-bg);
   color: var(--searchbar-fg);
 }
@@ -208,8 +206,7 @@ a > .hljs {
 
 .searchresults-header {
   font-weight: bold;
-  font-size: 1em;
-  padding: 18px 0 0 5px;
+  padding: 1rem 0 0 0.3rem;
   color: var(--searchresults-header-fg);
 }
 
@@ -218,17 +215,17 @@ a > .hljs {
   max-height: 88dvh;
   overflow-y: scroll;
 
-  font-size: 1.3em;
+  font-size: 0.8em;
   position: absolute;
 
   color: var(--fg);
   background: var(--bg);
 
-  margin: 0 2em 0 -9em;
-  padding: 8px;
+  margin-left: -7em;
+  padding: 0.8em;
 
-  border: 2px solid var(--searchbar-border-color);
-  border-radius: 16px;
+  border: 0.1em solid var(--searchbar-border-color);
+  border-radius: 1.6em;
 }
 
 .sidebar {
@@ -243,12 +240,12 @@ a > .hljs {
 
   ::-webkit-scrollbar-thumb {
     background: var(--scrollbar);
-    border-radius: 10px;
+    border-radius: 1rem;
   }
 }
 
 .sidebar-scrollbox {
-  display: none;    // Initially, it is hidden
+  display: none; // Initially, it is hidden
   position: fixed;
   top: var.$menu-bar-height;
   bottom: 0;
@@ -259,15 +256,15 @@ a > .hljs {
 .chapter {
   padding-left: 1em;
   line-height: 2.2em;
-  font-size: 1.1em;
+  font-size: 0.7em;
+  font-style: italic;
 
   li {
-    font-style: italic;
     list-style-type: none;
 
     .part-title {
       color: var(--sidebar-fg);
-      margin: 5px 0px;
+      margin: 4rem 0;
       font-weight: bold;
     }
 
@@ -288,7 +285,7 @@ a > .hljs {
       cursor: pointer;
       display: block;
       margin-left: auto;
-      padding: 0 10px;
+      padding: 0 1.2rem;
       opacity: 0.68;
       font-style: normal;
 
@@ -304,11 +301,11 @@ a > .hljs {
 
     &.part-title {
       color: var(--sidebar-fg);
-      margin: 12px auto 2px;
+      margin: 1.2rem auto 0.2rem;
       font-weight: bold;
       background-image: linear-gradient(to right, var.$color_pink 50%, var(--bg));
       background-repeat: no-repeat;
-      background-size: 100% 1px;
+      background-size: 100% 0.1rem;
       background-position: bottom;
     }
 
@@ -319,20 +316,20 @@ a > .hljs {
 }
 
 .section {
-  padding-left: 10px;
+  padding-left: 0.5rem;
 }
 
 .theme-popup {
   position: absolute;
   top: var.$menu-bar-height;
-  left: 40px;
-  border-radius: 4px;
-  font-size: 0.7em;
+  left: 2.4rem;
+  border-radius: 0.4rem;
+  font-size: 0.4em;
   color: var(--fg);
   background: var(--theme-popup-bg);
-  border: 1px solid var(--theme-popup-border);
+  border: 0.1rem solid var(--theme-popup-border);
   margin: 0;
-  padding: 2px;
+  padding: 0.4rem;
   display: none;
   overflow: hidden;
 
@@ -343,8 +340,8 @@ a > .hljs {
     width: 100%;
     border: 0;
     margin: 0;
-    padding: 2px 20px;
-    line-height: 25px;
+    padding: 0.2rem 1.25rem;
+    line-height: 1.5rem;
     white-space: nowrap;
     text-align: left;
     cursor: pointer;
@@ -358,10 +355,10 @@ a > .hljs {
   }
 }
 .theme-selected::before {
-  $theme-width: 14px;
+  $theme-width: 1rem;
 
   display: inline-block;
   content: '✓';
-  margin-left: 0px - $theme-width;
+  margin-left: 0 - $theme-width;
   width: $theme-width;
 }
