--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -1,16 +1,12 @@
 @use '../variables' as var;
 
-:root {
-  font-size: 62.5%; // Browser default font-size is 16px, this way 1 rem = 10px
-}
-
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 
 body {
-  margin: 0px;
+  margin: 0;
 
   display: flex;
   flex-direction: column;
@@ -31,7 +27,7 @@ body {
 
   &::-webkit-scrollbar-thumb {
     background: var(--scrollbar);
-    border-radius: 10px;
+    border-radius: 0.8rem;
   }
 }
 
@@ -53,8 +49,8 @@ table {
   border-collapse: collapse;
 
   td {
-    padding: 3px 20px;
-    border: 1px var(--table-border-color) solid;
+    padding: 0.4rem 2rem;
+    border: 0.1rem var(--table-border-color) solid;
   }
   thead {
     background: var(--table-header-bg);
@@ -64,10 +60,10 @@ table {
       border: none;
     }
     th {
-      padding: 3px 20px;
+      padding: 0.4rem 2rem;
     }
     tr {
-      border: 1px var(--table-header-bg) solid;
+      border: 0.1rem var(--table-header-bg) solid;
     }
   }
   tbody {
@@ -84,8 +80,8 @@ pre {
 
   & > .buttons {
     position: absolute;
-    right: 0px;
-    top: 4px;
+    right: 0;
+    top: 0.4rem;
 
     color: var(--sidebar-fg);
     cursor: pointer;
@@ -99,17 +95,17 @@ pre {
       background-color: var(--theme-hover);
     }
     i {
-      margin-left: 8px;
+      margin-left: 0.8rem;
     }
     button {
       cursor: inherit;
-      margin: 0px 5px;
-      padding: 3px 5px;
-      font-size: 14px;
+      margin: 0 0.4rem;
+      padding: 0.4rem 0.4rem;
+      font-size: 0.75rem;
 
       border-style: solid;
-      border-width: 1px;
-      border-radius: 4px;
+      border-width: 0.1rem;
+      border-radius: 0.4rem;
       border-color: var(--icons);
       background-color: var(--theme-popup-bg);
       transition: 100ms;
@@ -119,11 +115,11 @@ pre {
   }
 
   & > code {
-    padding: 1rem;
+    padding: 0.7rem;
   }
 
   & > .result {
-    margin-top: 10px;
+    margin-top: 0.1rem;
   }
 
   &:hover > .buttons {
@@ -134,19 +130,17 @@ pre {
 
 @media (pointer: coarse) {
   pre > .buttons button {
-    padding: 0.3rem 1rem; // On mobile, make it easier to tap buttons.
+    padding: 0.4rem 1rem; // On mobile, make it easier to tap buttons.
   }
 }
 
 ul {
   &#searchresults {
     list-style: none;
-    padding-left: 20px;
+    padding-left: 0.4rem;
 
     li {
-      margin: 10px 0px;
-      padding: 2px;
-      border-radius: 2px;
+      padding: 0.4rem;
 
       &.focus {
         background-color: var(--searchresults-li-bg);
@@ -156,11 +150,11 @@ ul {
       &.teaser {
         display: block;
         clear: both;
-        margin: 5px 0 0 20px;
-        font-size: 0.8em;
+        margin: 0.4rem 0 0 1.25rem;
+        font-size: 0.5em;
 
         em {
-          background: linear-gradient(rgba(0,0,0,0) 80%, var(--search-mark-bg));
+          background: linear-gradient(rgba(0, 0, 0, 0) 80%, var(--search-mark-bg));
           font-weight: bold;
         }
       }
@@ -170,19 +164,19 @@ ul {
 
 mark {
   color: var(--fg);
-  background: linear-gradient(rgba(0,0,0,0) 70%, var(--search-mark-bg));
+  background: linear-gradient(rgba(0, 0, 0, 0) 70%, var(--search-mark-bg));
   cursor: pointer;
 }
 
 kbd {
   background-color: var(--table-border-color);
-  border-radius: 4px;
-  border: solid 1px var(--theme-popup-border);
-  box-shadow: inset 0 -1px 0 var(--theme-hover);
+  border-radius: 0.4rem;
+  border: solid 0.1rem var(--theme-popup-border);
+  box-shadow: inset 0 -0.1rem 0 var(--theme-hover);
   display: inline-block;
   font-size: var.$code-font-size;
   font-family: var.$mono-font;
-  line-height: 10px;
-  padding: 4px 5px;
+  line-height: 1rem;
+  padding: 0.4rem 0.4rem;
   vertical-align: middle;
 }
