--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -60,14 +60,14 @@
   visibility: hidden;
   color: #fff;
   background-color: #333;
-  transform: translateX(-50%); // Center by moving tooltip 50% of its width left
-  left: -0.8rem; // Half of the width of the icon
-  top: -3.6rem;
-  font-size: 0.5em;
+  left: -1.8em;
+  top: -3.5em;
+  width: 4em;
+  height: 1em;
   text-align: center;
   border-radius: 0.8rem;
-  padding: 0.4rem 0.8rem;
-  margin: 0.4rem;
+  padding: 0.4em 0.8em;
+  margin: 0.4em;
 
   .tooltipped & {
     visibility: visible;
@@ -90,18 +90,22 @@ a > .hljs {
 
   .menu-bar {
     position: fixed;
+    width: 100dvw;
+    height: var.$menu-bar-height;
 
     display: flex;
-    width: 100dvw;
+    align-items: center;
+    -webkit-align-items: center;
+    gap: 1em;
 
     background-color: var(--bg);
     z-index: 101;
     opacity: 0.92;
 
+    font-size: 1.1em;
+
     i,
     .icon-button {
-      padding: 0 0.5rem;
-      line-height: var.$menu-bar-height;
       cursor: pointer;
     }
 
@@ -121,34 +125,31 @@ a > .hljs {
   .icon-button {
     border: none;
     background: none;
-    padding: 0;
     color: inherit;
-
-    i {
-      margin: 0;
-    }
-  }
-  .right-buttons {
-    margin: 0 1rem;
-
-    a {
-      text-decoration: none;
-    }
   }
 
   .left-buttons {
+    margin-left: 1.2rem;
+
     display: flex;
-    margin: 0 0.4rem;
+    gap: 1.2em;
   }
 
   .menu-title {
     font-size: 0.8em;
     font-style: italic;
-    line-height: var.$menu-bar-height;
     text-align: right;
     flex: 1;
     white-space: nowrap;
     text-overflow: ellipsis;
+  }
+
+  .right-buttons {
+    margin-right: 1.2rem;
+
+    a {
+      text-decoration: none;
+    }
   }
 }
 
@@ -171,17 +172,6 @@ a > .hljs {
   }
   i:hover {
     color: var(--icons-hover);
-  }
-}
-
-:not(pre) {
-  & > .hljs {
-    display: inline;
-    font-weight: 500;
-    padding: 0.1rem 0.3rem;
-    border-radius: 0.2rem;
-    color: var(--inline-code-color);
-    background-color: var(--quote-bg);
   }
 }
 
@@ -211,21 +201,47 @@ a > .hljs {
 }
 
 .searchresults-outer {
-  min-width: 84dvw;
+  width: 84dvw;
   max-height: 88dvh;
   overflow-y: scroll;
 
-  font-size: 0.8em;
+  font-size: 0.9em;
   position: absolute;
 
   color: var(--fg);
   background: var(--bg);
 
-  margin-left: -7em;
+  margin-left: -9em;
   padding: 0.8em;
 
   border: 0.1em solid var(--searchbar-border-color);
   border-radius: 1.6em;
+
+  ul {
+    list-style: none;
+    padding-left: 0.4rem;
+
+    li {
+      padding: 0.5rem;
+
+      &.focus {
+        background-color: var(--searchresults-li-bg);
+      }
+    }
+    span {
+      &.teaser {
+        display: block;
+        clear: both;
+        margin: 0.4rem 0 0 1.25rem;
+        font-size: 0.8em;
+
+        em {
+          background: linear-gradient(rgba(0, 0, 0, 0) 80%, var(--search-mark-bg));
+          font-weight: bold;
+        }
+      }
+    }
+  }
 }
 
 .sidebar {
@@ -269,6 +285,7 @@ a > .hljs {
     }
 
     a {
+      display: block;
       color: var(--sidebar-fg);
       text-decoration: none;
 
