--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -96,15 +96,11 @@ pre {
       border-color: var(--icons-hover);
       background-color: var(--theme-hover);
     }
-    i {
-      margin-left: 0.8rem;
-    }
+
     button {
       cursor: inherit;
       margin: 0 0.4rem;
       padding: 0.4rem 0.4rem;
-      font-size: 0.75rem;
-
       border-style: solid;
       border-width: 0.1rem;
       border-radius: 0.4rem;
@@ -130,37 +126,20 @@ pre {
   }
 }
 
-@media (pointer: coarse) {
-  pre > .buttons button {
-    padding: 0.4rem 1rem; // On mobile, make it easier to tap buttons.
+:not(pre) {
+  & > .hljs {
+    display: inline;
+    font-weight: 500;
+    padding: 0.1rem 0.3rem;
+    border-radius: 0.2rem;
+    color: var(--inline-code-color);
+    background-color: var(--quote-bg);
   }
 }
 
-ul {
-  &#searchresults {
-    list-style: none;
-    padding-left: 0.4rem;
-
-    li {
-      padding: 0.4rem;
-
-      &.focus {
-        background-color: var(--searchresults-li-bg);
-      }
-    }
-    span {
-      &.teaser {
-        display: block;
-        clear: both;
-        margin: 0.4rem 0 0 1.25rem;
-        font-size: 0.5em;
-
-        em {
-          background: linear-gradient(rgba(0, 0, 0, 0) 80%, var(--search-mark-bg));
-          font-weight: bold;
-        }
-      }
-    }
+@media (pointer: coarse) {
+  pre > .buttons button {
+    padding: 0.4rem 1rem; // On mobile, make it easier to tap buttons.
   }
 }
 
